# DMToolbox

./: LICENSE  README.md  pyproject.toml
data/: personaje_libertad.txt
dmtoolbox/: __main__.py  main.py
tests/: test_main.py
