[tool.poetry]
name = "dmtoolbox"
version = "0.1.0"
description = ""
authors = ["roschart <jlbalirac@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
